# beam

./: .gitignore  .gitmodules  .travis.yml  .travis_no_build.yml  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Doxyfile  README.md  SECURITY.md  TERMS.rtf  TERMS.txt  appveyor.yml  appveyor_no_build.yml  beam-common.cfg  beam.cfg  build_android.sh  deploy.sh  macos_cert.enc  notarize.sh  os64combined.diff  version.h.in
android/: CMakeLists.txt  README.md  WalletJNI.java  common.cpp  common.h  jni.cpp  node_model.cpp  node_model.h  wallet_model.cpp  wallet_model.h
android/dao/: apps_api_ui.cpp  apps_api_ui.h  public.cpp  public.h  web_api_creator.cpp  web_api_creator.h
bbs/: bbs.cpp  (+4 more)
beam/: CMakeLists.txt  beam-node.cfg  beam.cfg  beam.cpp  cli.cpp  node.cpp  node.h  node_db.cpp  node_db.h  node_processor.cpp  node_processor.h
beam/functionaltests/: CMakeLists.txt  check_mined_test.cpp  double_spending_2_tx_test.cpp  double_spending_test.cpp  experiment_with_sieze_tx_test.cpp  fraction_coin_test.cpp  node_connection_test.cpp  send_big_tx_test.cpp  (+20 more)
bvm/: CMakeLists.txt  ManagerStd.cpp  ManagerStd.h  bvm2.cpp  bvm2.h  bvm2_Callbacks.h  bvm2_cost.h  bvm2_impl.h  bvm2_opcodes.h  bvm2_shared.h  evm.cpp  evm.h  invoke_data.cpp  invoke_data.h  wasm_interpreter.cpp  wasm_interpreter.h
core/: CMakeLists.txt  aes.cpp  aes.h  aes2.cpp  aes2.h  async.h  base58.cpp  base58.h  block.h  block_crypt.cpp  block_crypt.h  block_rw.cpp  block_rw.h  block_validation.cpp  bvm.cpp  bvm.h  bvm2.cpp  bvm2.h  bvm2_opcodes.h  bvm_opcodes.h  chainwork.cpp  common.cpp  common.h  difficulty.cpp  difficulty.h  ecc.cpp  ecc.h  ecc_bulletproof.cpp  ecc_min.c  ecc_min.cpp  ecc_min.h  ecc_native.h  fly_client.cpp  fly_client.h  keccak.cpp  keccak.h  lelantus.cpp  lelantus.h  lightning.cpp  lightning.h  (+30 more)
debugger/: CMakeLists.txt  dap_client.cpp  dap_client.h  shader_debugger.h  shaders_debugger.cpp
explorer/: CMakeLists.txt  adapter.cpp  adapter.h  explorer-node.cfg  explorer_node.cpp  server.cpp  server.h
http/: CMakeLists.txt  http_client.cpp  http_client.h  http_connection.h  http_json_serializer.cpp  http_json_serializer.h  http_msg_creator.cpp  http_msg_creator.h  http_msg_reader.cpp  http_msg_reader.h
hw_crypto/: CMakeLists.txt  coinid.h  context.c  ecc_decl.h  ecc_min.c  hw_crypto.c  kdf.h  keykeeper.h  multimac.h  noncegen.h  oracle.h  rangeproof.h  sign.h
keychain/: CMakeLists.txt
keykeeper/: CMakeLists.txt  hid_key_keeper.cpp  hid_key_keeper.h  hw_wallet.cpp  hw_wallet.h  index.html  ledger_app_nanos.cpp  ledger_app_nanosplus.cpp  ledger_loader.cpp  ledger_loader.h  local_private_key_keeper.cpp  local_private_key_keeper.h  main.cpp  private_key_keeper.h  readme.md  remote_key_keeper.cpp  remote_key_keeper.h  trezor_key_keeper.cpp  trezor_key_keeper.h  usb_key_keeper.cpp  usb_key_keeper.h  wasm_key_keeper.cpp  wasm_key_keeper.h
libbitcoin/: CMakeLists.txt
miner/: CMakeLists.txt  common.h  miner.cpp  miner.h
mnemonic/: CMakeLists.txt  dictionary.cpp  dictionary.h  mnemonic.cpp  mnemonic.h
node/: CMakeLists.txt  bridge.cpp  bridge.h  db.cpp  db.h  node.cpp  node.h  node_client.cpp  node_client.h  node_compressor.cpp  node_db.cpp  node_processor.h  processor.cpp  processor.h  txpool.cpp  txpool.h
p2p/: CMakeLists.txt  banned_peers.h  base_connection.h  connect_pool.cpp  connect_pool.h  connected_peers.cpp  connected_peers.h  connection.cpp  connection.h  connections.cpp  connections.h  fragment_writer.cpp  fragment_writer.h  handshake.cpp  handshake.h  http_client.cpp  http_client.h  http_connection.h  http_msg_creator.cpp  http_msg_creator.h  http_msg_reader.cpp  http_msg_reader.h  ip_access_control.cpp  ip_access_control.h  json_serializer.cpp  json_serializer.h  line_protocol.h  msg_deserializer.h  msg_reader.cpp  msg_reader.h  msg_serializer.cpp  msg_serializer.h  notifications.h  p2p.cpp  p2p.h  p2p.kdev4  p2p_settings.h  peer_info.h  peer_storage.cpp  peer_storage.h  (+18 more)
pow/: CMakeLists.txt  beamHash.cpp  bin2h.cmake  equihash.cpp  external_pow.cpp  external_pow.h  external_pow_stub.cpp  miner_client.cpp  opencl_pow.cpp  stratum.cpp  stratum.h  stratum_server.cpp  stratum_server.h
private_keys/: .gitignore  CMakeLists.txt  testkey
sqlite/: CMakeLists.txt
ui/: CMakeLists.txt  Info.plist  Info.plist.in  beam-ui.cfg  beam-wallet.cfg  beam.desktop  beam.desktop.in  beam.icns  beam.rc  beam.rc.in  beam.xml  qml.qrc  qml_qmlcache.qrc.depends  test_model.cpp  test_model.h  translations_qmlcache.qrc  translator.cpp  translator.h  ui.cpp
utility/: CMakeLists.txt  asynccontext.cpp  asynccontext.h  blobmap.h  bridge.h  byteorder.h  common.cpp  common.h  config.cpp  config.h  containers.h  dictionary.cpp  dvector.h  executor.h  expected.h  fsutils.cpp  fsutils.h  helpers.cpp  helpers.h  hex.cpp  hex.h  log_rotation.cpp  log_rotation.h  logger.cpp  logger.h  logger_checkpoints.cpp  logger_checkpoints.h  message_queue.h  mnemonic.cpp  options.cpp  options.h  serialize.h  serialize_fwd.h  serialize_streams.h  shared_data.h  std_extension.h  string_helpers.cpp  string_helpers.h  test_helpers.h  thread.h  (+1 more)
wallet/: CMakeLists.txt  aissue_transaction.cpp  aissue_transaction.h  aissue_tx_builder.cpp  aissue_tx_builder.h  api.cpp  api.h  api_cli.cpp  base58.cpp  base58.h  base_transaction.cpp  base_transaction.h  base_tx_builder.cpp  base_tx_builder.h  bbs_miner.cpp  bbs_miner.h  bbsutil.cpp  bbsutil.h  beam-wallet.cfg  bitcoin_rpc.cpp  bitcoin_rpc.h  bitcoind016.h  bitcoind017.cpp  cli.cpp  common.cpp  common.h  common_utils.cpp  common_utils.h  default_peers.cpp  default_peers.h  dictionary.h  hw_wallet.cpp  hw_wallet.h  keychain.cpp  keychain.h  keystore.cpp  keystore.h  libsqlcipher.so.0  libsqlcipher.so.0.8.6  local_private_key_keeper.cpp  (+40 more)
wasmclient/: CMakeLists.txt  README.md  common.cpp  common.h  fix-client.py  index.html  package.json.in  wasm_beamapi.cpp  wasm_beamapi.h  wasmclient.cpp  webapi_beam.cpp  webapi_beam.h
websocket/: CMakeLists.txt  reactor.cpp  reactor.h  sessions.cpp  sessions.h  utils.cpp  utils.h  websocket_server.cpp  websocket_server.h
(+1732 files in other folders)
